refactor(AI dto): ai 통신 시 입출력 데이터는 스네이크 케이스로 통신하도록 설정
Signed-off-by: BORB <qzsec299@naver.com>