@@ -1,6 +1,7 @@
 package spring.beautiq.domain.product.dto.ai.request;
 
-import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.databind.PropertyNamingStrategies;
+import com.fasterxml.jackson.databind.annotation.JsonNaming;
 import io.swagger.v3.oas.annotations.media.Schema;
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotNull;
@@ -8,7 +9,6 @@ import lombok.*;
 import spring.beautiq.domain.product.entity.ProductEntity;
 import spring.beautiq.domain.skinanalysis.entity.SkinAnalysisEntity;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -17,6 +17,7 @@ import java.util.stream.Collectors;
 @Builder
 @NoArgsConstructor
 @AllArgsConstructor
+@JsonNaming(PropertyNamingStrategies.SnakeCaseStrategy.class)
 @Schema(
         description = "AI 제품 추천 요청 DTO",
         example = """
@@ -47,18 +48,15 @@ import java.util.stream.Collectors;
 )
 public class ProductAIRequest {
 
-    @JsonProperty("skin_analysis")
     @NotNull
     @Valid
     @Schema(description = "피부 분석 데이터", requiredMode = Schema.RequiredMode.REQUIRED)
     private SkinAnalysisData skinAnalysis;
 
-    @JsonProperty("recommended_categories")
     @NotNull
     @Schema(description = "기준 미달 카테고리 리스트", example = "[\"moisture\", \"wrinkle\", \"pore\"]", requiredMode = Schema.RequiredMode.REQUIRED)
     private List<String> recommendedCategories;
 
-    @JsonProperty("filtered_products")
     @NotNull
     @Valid
     @Schema(description = "필터링된 제품 리스트", requiredMode = Schema.RequiredMode.REQUIRED)
@@ -88,31 +86,27 @@ public class ProductAIRequest {
     @Builder
     @NoArgsConstructor
     @AllArgsConstructor
+    @JsonNaming(PropertyNamingStrategies.SnakeCaseStrategy.class)
     @Schema(description = "피부 분석 데이터")
     public static class SkinAnalysisData {
 
         @NotNull
-        @JsonProperty("pigmentation_reg")
         @Schema(description = "색소침착 회귀 점수", example = "50", type = "integer", format = "int32", requiredMode = Schema.RequiredMode.REQUIRED)
         private Integer pigmentationReg;
 
         @NotNull
-        @JsonProperty("moisture_reg")
         @Schema(description = "수분 점수", example = "65", type = "integer", format = "int32", requiredMode = Schema.RequiredMode.REQUIRED)
         private Integer moistureReg;
 
         @NotNull
-        @JsonProperty("elasticity_reg")
         @Schema(description = "탄력 점수", example = "78.5", type = "number", format = "float", requiredMode = Schema.RequiredMode.REQUIRED)
         private Float elasticityReg;
 
         @NotNull
-        @JsonProperty("wrinkle_reg")
         @Schema(description = "주름 회귀 점수", example = "35", type = "integer", format = "int32", requiredMode = Schema.RequiredMode.REQUIRED)
         private Integer wrinkleReg;
 
         @NotNull
-        @JsonProperty("pore_reg")
         @Schema(description = "모공 회귀 점수", example = "55", type = "integer", format = "int32", requiredMode = Schema.RequiredMode.REQUIRED)
         private Integer poreReg;
 
@@ -132,16 +126,15 @@ public class ProductAIRequest {
     @Builder
     @NoArgsConstructor
     @AllArgsConstructor
+    @JsonNaming(PropertyNamingStrategies.SnakeCaseStrategy.class)
     @Schema(description = "필터링된 제품 정보")
     public static class FilteredProduct {
 
         @NotNull
-        @JsonProperty("product_id")
         @Schema(description = "제품 고유 ID", example = "550e8400-e29b-41d4-a716-446655440000", type = "string", format = "uuid", requiredMode = Schema.RequiredMode.REQUIRED)
         private String productId;
 
         @NotNull
-        @JsonProperty("product_name")
         @Schema(description = "제품명", example = "[라운드랩] 1025 독도 토너 200ml", type = "string", requiredMode = Schema.RequiredMode.REQUIRED)
         private String productName;
 
@@ -158,12 +151,10 @@ public class ProductAIRequest {
         private Integer price;
 
         @NotNull
-        @JsonProperty("review_score")
         @Schema(description = "리뷰 평점", example = "4.5", type = "number", format = "float", requiredMode = Schema.RequiredMode.REQUIRED)
         private Float reviewScore;
 
         @NotNull
-        @JsonProperty("review_count")
         @Schema(description = "리뷰 개수", example = "1234", type = "integer", format = "int32", requiredMode = Schema.RequiredMode.REQUIRED)
         private Integer reviewCount;
 
@@ -171,18 +162,17 @@ public class ProductAIRequest {
         @Schema(description = "주요 성분 리스트", example = "[\"히알루론산\", \"나이아신아마이드\", \"판테놀\"]", type = "array", requiredMode = Schema.RequiredMode.REQUIRED)
         private List<String> ingredients;
 
-        public static FilteredProduct from(ProductEntity entity) {
+        public static FilteredProduct from(ProductEntity e) {
+            Integer price = e.getSalePrice() != null ? e.getSalePrice() : e.getListPrice();
             return FilteredProduct.builder()
-                    .productId(entity.getId().toString())
-                    .productName(entity.getProductName())
-                    .brand(entity.getBrand())
-                    .category(entity.getCategory())
-                    .price(entity.getSalePrice() != null ? entity.getSalePrice() : entity.getListPrice())
-                    .reviewScore(entity.getReviewScore() != null ? entity.getReviewScore().floatValue() : 0.0f)
-                    .reviewCount(entity.getReviewCount() != null ? entity.getReviewCount() : 0)
-                    .ingredients(entity.getIngredients() != null
-                            ? Arrays.asList(entity.getIngredients().split(",\\s*"))
-                            : List.of())
+                    .productId(e.getId().toString())
+                    .productName(e.getProductName())
+                    .brand(e.getBrand())
+                    .category(e.getCategory())
+                    .price(price)
+                    .reviewScore(e.getReviewScore() == null ? 0f : e.getReviewScore().floatValue())
+                    .reviewCount(e.getReviewCount() == null ? 0 : e.getReviewCount())
+                    .ingredients(e.getIngredients() == null || e.getIngredients().isBlank() ? List.of() : List.of(e.getIngredients().split(",")))
                     .build();
         }
     }
